--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,11 +1,12 @@
+image: gitpod/workspace-full
+
 tasks:
   - name: aws-cli
-    env: 
-        AWS_CLI_AUTO_PROMPT: on-partial
-    before: |
+    env:
+      AWS_CLI_AUTO_PROMPT: on-partial
+    init: |
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
       sudo ./aws/install
-      cd $PWD
-
+      aws --version
